Fixed yarn docker:dev console coloring

--- a/compose.yml
+++ b/compose.yml
@@ -195,6 +195,7 @@ services:
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY:-}
       - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY:-}
       - STRIPE_ACCOUNT_ID=${STRIPE_ACCOUNT_ID:-}
+    tty: true
 
   storybook:
     <<: *service-template
