--- a/compose.yml
+++ b/compose.yml
@@ -84,7 +84,6 @@ services:
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY:-}
       - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY:-}
       - STRIPE_ACCOUNT_ID=${STRIPE_ACCOUNT_ID:-}
-
   tinybird:
     extends:
       service: ghost
@@ -95,6 +94,17 @@ services:
     working_dir: /home/ghost/ghost/web-analytics
     profiles: [ tinybird]
     tty: true
+
+  browser-tests:
+    extends:
+      service: ghost
+    build:
+      context: .
+      dockerfile: ./.docker/Dockerfile
+      target: browser-tests
+    command: [ "yarn", "test:browser" ]
+    profiles: [ browser-tests ]
+
   mysql:
     image: mysql:8.4.5
     container_name: ghost-mysql
