--- a/compose.yml
+++ b/compose.yml
@@ -84,6 +84,17 @@ services:
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY:-}
       - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY:-}
       - STRIPE_ACCOUNT_ID=${STRIPE_ACCOUNT_ID:-}
+
+  tinybird:
+    extends:
+      service: ghost
+    build:
+      context: .
+      dockerfile: ./.docker/Dockerfile
+      target: tinybird
+    working_dir: /home/ghost/ghost/web-analytics
+    profiles: [ tinybird]
+    tty: true
   mysql:
     image: mysql:8.4.5
     container_name: ghost-mysql
