--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,8 +1,5 @@
 ARG NODE_VERSION=20.15.1
-ARG WORKDIR=/home/ghost
 
-# Base Image used for all targets
-## This stage includes the OS, Node and a few apt packages
 FROM node:$NODE_VERSION-bullseye-slim AS base
 RUN apt-get update && \
     apt-get install -y \
@@ -15,11 +12,8 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/* && \
     apt clean
 
-# Development Base Image
-## This stage adds development specific packages like the Stripe CLI, zsh, playwright, etc.
-## It does not include the source code or node_modules
 FROM base AS development-base
-ARG WORKDIR=/home/ghost
+WORKDIR /home/ghost
 RUN curl -s https://packages.stripe.dev/api/security/keypair/stripe-cli-gpg/public | gpg --dearmor | tee /usr/share/keyrings/stripe.gpg && \
     echo "deb [signed-by=/usr/share/keyrings/stripe.gpg] https://packages.stripe.dev/stripe-cli-debian-local stable main" | tee -a /etc/apt/sources.list.d/stripe.list && \
     apt update && \
@@ -30,12 +24,9 @@ RUN curl -s https://packages.stripe.dev/api/security/keypair/stripe-cli-gpg/publ
     rm -rf /var/lib/apt/lists/* && \
     apt clean
 
-# DevContainer Stage: Install dependencies and copy the code
-## This stage is used for local development
-## It includes the source code and all development dependencies
+
 FROM development-base AS development
-ARG WORKDIR=/home/ghost
-WORKDIR $WORKDIR
+WORKDIR /home/ghost
 
 ## Add github to known hosts
 ### Without this, git submodule updates fail inside the container
@@ -85,32 +76,19 @@ COPY ghost/security/package.json ghost/security/package.json
 
 ## Install dependencies
 RUN yarn install --frozen-lockfile --prefer-offline
-
-## Copy the rest of the code
 COPY . .
-
-## Build typescript packages
 RUN yarn nx run-many -t build:ts
-
-WORKDIR $WORKDIR
-
-## Start the dev server
 CMD ["yarn", "dev"]
 
-FROM development AS tinybird
 
+FROM development AS tinybird
 RUN apt update && apt install -y \
     parallel \
     python3-pip
-
-# Install the tinybird CLI
 WORKDIR /home/ghost/ghost/web-analytics
 RUN pip install -r requirements.txt
 
+
 FROM development AS browser-tests
-
-## Install playwright w/ dependencies
 RUN npx -y playwright install --with-deps
-
-## Run the browser tests
 CMD ["yarn", "test:browser"]
