--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -98,7 +98,6 @@
     "@tryghost/kg-lexical-html-renderer": "1.3.5",
     "@tryghost/kg-mobiledoc-html-renderer": "7.1.1",
     "@tryghost/limit-service": "1.2.15",
-    "@tryghost/link-replacer": "0.0.0",
     "@tryghost/logging": "2.4.21",
     "@tryghost/members-csv": "0.0.0",
     "@tryghost/members-offers": "0.0.0",
@@ -147,6 +146,7 @@
     "date-fns": "2.30.0",
     "dompurify": "3.2.5",
     "downsize": "0.0.8",
+    "entities": "4.5.0",
     "express": "4.21.2",
     "express-brute": "1.0.1",
     "express-hbs": "2.5.0",
@@ -164,6 +164,7 @@
     "gscan": "4.48.0",
     "handlebars": "4.7.8",
     "html-to-text": "5.1.1",
+    "html5parser": "2.0.2",
     "human-number": "2.0.4",
     "iconv-lite": "0.6.3",
     "image-size": "1.2.1",
