--- a/compose.yml
+++ b/compose.yml
@@ -81,26 +81,25 @@ services:
       - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY:-}
       - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY:-}
       - STRIPE_ACCOUNT_ID=${STRIPE_ACCOUNT_ID:-}
-  # tinybird:
-  #   extends:
-  #     service: ghost
-  #   build:
-  #     context: .
-  #     dockerfile: ./.docker/Dockerfile
-  #     target: tinybird
-  #   working_dir: /home/ghost/ghost/web-analytics
-  #   profiles: [ tinybird]
-  #   tty: true
 
-  # browser-tests:
-  #   extends:
-  #     service: ghost
-  #   build:
-  #     context: .
-  #     dockerfile: ./.docker/Dockerfile
-  #     target: browser-tests
-  #   command: [ "yarn", "test:browser" ]
-  #   profiles: [ browser-tests ]
+  tinybird:
+    <<: *common-volumes
+    build:
+      context: .
+      dockerfile: ./.docker/Dockerfile
+      target: tinybird
+    working_dir: /home/ghost/ghost/web-analytics
+    profiles: [ tinybird ]
+    tty: true
+
+  browser-tests:
+    <<: *common-volumes
+    build:
+      context: .
+      dockerfile: ./.docker/Dockerfile
+      target: browser-tests
+    command: [ "yarn", "test:browser" ]
+    profiles: [ browser-tests ]
 
   mysql:
     image: mysql:8.4.5
