--- a/apps/announcement-bar/package.json
+++ b/apps/announcement-bar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tryghost/announcement-bar",
-  "version": "1.1.8",
+  "version": "1.1.9",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -30,8 +30,7 @@
     "test:unit": "yarn test:ci",
     "lint": "eslint src --ext .js --cache",
     "preship": "yarn lint",
-    "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn version; fi",
-    "postship": "git push ${GHOST_UPSTREAM:-origin} --follow-tags && npm publish",
+    "ship": "node ../../.github/scripts/release-apps.js",
     "prepublishOnly": "yarn build"
   },
   "eslintConfig": {
