Added vitest setup for posts app

--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -22,12 +22,17 @@
         "lint": "yarn run lint:code && yarn run lint:test",
         "lint:code": "eslint --ext .js,.ts,.cjs,.tsx --cache src",
         "lint:test": "eslint -c test/.eslintrc.cjs --ext .js,.ts,.cjs,.tsx --cache test",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest run",
+        "test:unit": "vitest run test/unit"
     },
     "devDependencies": {
         "@testing-library/react": "14.3.1",
         "@types/react": "18.3.20",
-        "@types/react-dom": "18.3.7"
+        "@types/react-dom": "18.3.7",
+        "@vitest/ui": "^1.6.0",
+        "jsdom": "^24.1.0",
+        "vitest": "^1.6.0"
     },
     "nx": {
         "targets": {
