Added build:ts commands to typescript apps that were missing it

--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -10,6 +10,7 @@
     "sideEffects": false,
     "scripts": {
         "build": "tsc -p tsconfig.declaration.json && vite build",
+        "build:ts": "yarn build",
         "prepare": "yarn build",
         "test": "yarn test:types && yarn nx build && vitest run --coverage",
         "test:unit": "yarn test:types && yarn nx build && vitest run",
