--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -30,9 +30,9 @@
         "@testing-library/react": "14.3.1",
         "@types/react": "18.3.20",
         "@types/react-dom": "18.3.7",
-        "@vitest/ui": "^1.6.0",
-        "jsdom": "^24.1.0",
-        "vitest": "^1.6.0"
+        "@vitest/ui": "1.6.0",
+        "jsdom": "24.1.0",
+        "vitest": "1.6.0"
     },
     "nx": {
         "targets": {
