Added unit test setup for posts app

--- a/apps/admin-x-framework/package.json
+++ b/apps/admin-x-framework/package.json
@@ -111,7 +111,7 @@
             "test:unit": {
                 "dependsOn": [
                     "test:unit",
-                    "^build",
+                    "^build:ts",
                     "@tryghost/admin-x-design-system:test:unit"
                 ]
             }
