--- a/apps/admin-x-design-system/package.json
+++ b/apps/admin-x-design-system/package.json
@@ -10,6 +10,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "tsc -p tsconfig.declaration.json && vite build",
+    "build:ts": "yarn build",
     "prepare": "yarn build",
     "test": "yarn test:unit",
     "test:unit": "yarn test:types && yarn nx build && vitest run",
