--- a/apps/admin-x-settings/package.json
+++ b/apps/admin-x-settings/package.json
@@ -25,6 +25,7 @@
     "dev": "vite build --watch",
     "dev:start": "vite",
     "build": "tsc && vite build",
+    "build:ts": "yarn build",
     "lint": "yarn run lint:js",
     "lint:js": "eslint --ext .js,.ts,.cjs,.tsx --cache src test",
     "test:unit": "yarn nx build && vitest run",
