--- a/apps/signup-form/package.json
+++ b/apps/signup-form/package.json
@@ -21,6 +21,7 @@
         "preview": "concurrently \"vite preview -l silent\" \"vite build --watch\"",
         "dev:test": "vite build && vite preview --port 6175",
         "build": "tsc && vite build",
+        "build:ts": "yarn build",
         "lint": "yarn run lint:js",
         "lint:js": "eslint --ext .js,.ts,.cjs,.tsx --cache src test",
         "test:unit": "yarn build",
