--- a/apps/admin-x-activitypub/package.json
+++ b/apps/admin-x-activitypub/package.json
@@ -19,7 +19,6 @@
     "dev": "vite build --watch",
     "dev:start": "vite",
     "build": "tsc && vite build",
-    "build:ts": "yarn build",
     "lint": "yarn run lint:code && yarn run lint:test",
     "lint:code": "eslint --ext .js,.ts,.cjs,.tsx --cache src",
     "lint:test": "eslint -c test/.eslintrc.cjs --ext .js,.ts,.cjs,.tsx --cache test",
@@ -48,6 +47,12 @@
       "dev": {
         "dependsOn": [
           "^build"
+        ]
+      },
+      "test:unit": {
+        "dependsOn": [
+          "^build",
+          "test:unit"
         ]
       },
       "test:acceptance": {
