--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -28,9 +28,14 @@
     "devDependencies": {
         "@testing-library/react": "14.3.1",
         "@types/react": "18.3.20",
-        "@types/react-dom": "18.3.7",
         "msw": "2.8.0",
-        "vitest": "3.1.3"
+        "vite": "4.5.6",
+        "vitest": "3.1.3",
+        "eslint-plugin-ghost": "3.4.0",
+        "eslint-plugin-react-refresh": "0.4.20",
+        "eslint-plugin-tailwindcss": "3.18.0",
+        "eslint-plugin-react-hooks": "4.6.2",
+        "eslint-plugin-react": "7.37.5"
     },
     "nx": {
         "targets": {
@@ -55,6 +60,10 @@
         "@tinybirdco/charts": "0.2.4",
         "@tryghost/admin-x-framework": "0.0.0",
         "@tryghost/shade": "0.0.0",
+        "i18n-iso-countries": "7.0.0",
+        "@tanstack/react-query": "4.36.1",
+        "moment-timezone": "0.5.48",
+        "moment": "2.30.1",
         "react": "18.3.1",
         "react-dom": "18.3.1"
     }
