--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -49,20 +49,20 @@
         "eslint-plugin-tailwindcss": "3.18.0",
         "jsdom": "24.1.3",
         "lodash-es": "4.17.21",
-        "mocha": "10.8.2"
-    },
-    "dependencies": {
-        "moment-timezone": "^0.5.48",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
-        "rollup-plugin-node-builtins": "2.1.2",
-        "sinon": "17.0.1",
-        "storybook": "8.6.12",
         "ts-node": "10.9.2",
         "typescript": "5.8.3",
-        "validator": "13.12.0",
+        "storybook": "8.6.12",
         "vite": "4.5.6",
         "vite-plugin-svgr": "3.3.0",
+        "rollup-plugin-node-builtins": "2.1.2",
+        "autoprefixer": "10.4.19",
+        "postcss": "8.4.39",
+        "postcss-import": "16.1.0",
+        "eslint-plugin-ghost": "3.4.0",
+        "eslint-plugin-react": "7.37.5",
+        "vitest": "3.1.3"
+    },
+    "dependencies": {
         "@dnd-kit/core": "6.3.1",
         "@dnd-kit/sortable": "7.0.2",
         "@ebay/nice-modal-react": "1.2.13",
@@ -86,12 +86,10 @@
         "@tailwindcss/forms": "0.5.10",
         "@tailwindcss/line-clamp": "0.4.4",
         "@uiw/react-codemirror": "4.23.12",
-        "autoprefixer": "10.4.19",
         "class-variance-authority": "0.7.1",
         "clsx": "2.1.1",
         "lucide-react": "0.503.0",
-        "postcss": "8.4.39",
-        "postcss-import": "16.1.0",
+        "moment-timezone": "0.5.48",
         "react-colorful": "5.6.1",
         "react-hook-form": "7.56.3",
         "react-hot-toast": "2.5.2",
@@ -100,6 +98,7 @@
         "tailwind-merge": "2.6.0",
         "tailwindcss": "3.4.17",
         "tailwindcss-animate": "1.0.7",
+        "validator": "13.12.0",
         "zod": "3.24.4"
     },
     "peerDependencies": {
