--- a/apps/stats/package.json
+++ b/apps/stats/package.json
@@ -31,11 +31,12 @@
     "devDependencies": {
         "@svg-maps/world": "1.0.1",
         "@testing-library/react": "14.3.1",
+        "@testing-library/jest-dom": "5.17.0",
         "@tinybirdco/charts": "0.2.4",
         "@tryghost/admin-x-framework": "0.0.0",
         "@tryghost/shade": "0.0.0",
+        "@types/jest": "29.5.13",
         "@types/react": "18.3.20",
-        "@types/react-dom": "18.3.7",
         "@types/react-svg-map": "2.1.4",
         "@vitejs/plugin-react": "4.4.1",
         "moment-timezone": "^0.5.48",
@@ -43,7 +44,12 @@
         "react-dom": "18.3.1",
         "react-svg-map": "2.2.0",
         "vite": "4.5.6",
-        "vitest": "3.1.3"
+        "vitest": "3.1.3",
+        "eslint-plugin-ghost": "3.4.0",
+        "eslint-plugin-react": "7.37.5",
+        "eslint-plugin-react-refresh": "0.4.20",
+        "eslint-plugin-tailwindcss": "3.18.0",
+        "eslint-plugin-react-hooks": "4.6.2"
     },
     "nx": {
         "targets": {
@@ -65,15 +71,13 @@
         }
     },
     "dependencies": {
-        "@radix-ui/react-form": "0.1.6",
         "@svg-maps/world": "1.0.1",
         "@tryghost/admin-x-framework": "0.0.0",
         "@tryghost/shade": "0.0.0",
-        "clsx": "2.1.1",
         "i18n-iso-countries": "7.14.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-svg-map": "2.2.0",
-        "use-debounce": "10.0.4"
+        "moment": "2.30.1"
     }
 }
