--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -25,9 +25,21 @@
         "lint:test": "eslint -c test/.eslintrc.cjs --ext .js,.ts,.cjs,.tsx --cache test",
         "preview": "vite preview"
     },
+    "dependencies": {
+        "@tinybirdco/charts": "0.2.4",
+        "@tryghost/admin-x-framework": "0.0.0",
+        "@tryghost/shade": "0.0.0",
+        "i18n-iso-countries": "7.0.0",
+        "@tanstack/react-query": "4.36.1",
+        "moment-timezone": "0.5.48",
+        "moment": "2.30.1",
+        "react": "18.3.1",
+        "react-dom": "18.3.1"
+    },
     "devDependencies": {
         "@testing-library/react": "14.3.1",
         "@types/react": "18.3.20",
+        "@types/jest": "29.5.13",
         "msw": "2.8.0",
         "vite": "4.5.6",
         "vitest": "3.1.3",
@@ -55,16 +67,5 @@
                 ]
             }
         }
-    },
-    "dependencies": {
-        "@tinybirdco/charts": "0.2.4",
-        "@tryghost/admin-x-framework": "0.0.0",
-        "@tryghost/shade": "0.0.0",
-        "i18n-iso-countries": "7.0.0",
-        "@tanstack/react-query": "4.36.1",
-        "moment-timezone": "0.5.48",
-        "moment": "2.30.1",
-        "react": "18.3.1",
-        "react-dom": "18.3.1"
     }
 }
