--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -27,79 +27,54 @@
         "tailwind.config.cjs"
     ],
     "devDependencies": {
-        "@codemirror/lang-html": "6.4.9",
         "@radix-ui/react-tooltip": "1.2.6",
-        "@storybook/addon-essentials": "8.6.12",
-        "@storybook/addon-interactions": "8.6.12",
-        "@storybook/addon-links": "8.6.12",
-        "@storybook/addon-styling": "1.3.7",
-        "@storybook/blocks": "8.6.12",
         "@storybook/react": "8.6.12",
         "@storybook/react-vite": "8.6.12",
-        "@storybook/testing-library": "0.2.2",
         "@testing-library/react": "14.3.1",
-        "@testing-library/react-hooks": "8.0.1",
-        "@types/lodash-es": "4.17.12",
         "@types/node": "22.15.8",
+        "@types/mocha": "10.0.1",
         "@vitejs/plugin-react": "4.4.1",
-        "c8": "8.0.1",
-        "chai": "4.5.0",
         "eslint-plugin-react-hooks": "4.6.2",
         "eslint-plugin-react-refresh": "0.4.20",
         "eslint-plugin-tailwindcss": "3.18.0",
         "jsdom": "24.1.3",
-        "lodash-es": "4.17.21",
-        "ts-node": "10.9.2",
         "typescript": "5.8.3",
         "storybook": "8.6.12",
         "vite": "4.5.6",
         "vite-plugin-svgr": "3.3.0",
         "rollup-plugin-node-builtins": "2.1.2",
-        "autoprefixer": "10.4.19",
-        "postcss": "8.4.39",
-        "postcss-import": "16.1.0",
         "eslint-plugin-ghost": "3.4.0",
         "eslint-plugin-react": "7.37.5",
-        "vitest": "3.1.3"
+        "vitest": "3.1.3",
+        "glob": "11.0.0",
+        "@typescript-eslint/parser": "5.59.11",
+        "@storybook/manager-api": "8.6.12",
+        "@storybook/theming": "8.6.12"  
     },
     "dependencies": {
-        "@dnd-kit/core": "6.3.1",
-        "@dnd-kit/sortable": "7.0.2",
         "@ebay/nice-modal-react": "1.2.13",
-        "@hookform/resolvers": "5.0.1",
         "@radix-ui/react-alert-dialog": "1.1.13",
         "@radix-ui/react-avatar": "1.1.9",
-        "@radix-ui/react-checkbox": "1.3.1",
         "@radix-ui/react-dialog": "1.1.13",
         "@radix-ui/react-dropdown-menu": "2.1.14",
-        "@radix-ui/react-form": "0.1.6",
         "@radix-ui/react-label": "2.1.6",
         "@radix-ui/react-popover": "1.1.13",
-        "@radix-ui/react-radio-group": "1.3.6",
         "@radix-ui/react-select": "2.2.4",
         "@radix-ui/react-separator": "1.1.6",
         "@radix-ui/react-slot": "1.2.2",
-        "@radix-ui/react-switch": "1.2.4",
         "@radix-ui/react-tabs": "1.1.11",
         "@radix-ui/react-tooltip": "1.2.6",
-        "@sentry/react": "7.120.3",
-        "@tailwindcss/forms": "0.5.10",
-        "@tailwindcss/line-clamp": "0.4.4",
-        "@uiw/react-codemirror": "4.23.12",
         "class-variance-authority": "0.7.1",
         "clsx": "2.1.1",
         "lucide-react": "0.503.0",
         "moment-timezone": "0.5.48",
-        "react-colorful": "5.6.1",
         "react-hook-form": "7.56.3",
         "react-hot-toast": "2.5.2",
-        "react-select": "5.10.1",
         "recharts": "2.15.3",
         "tailwind-merge": "2.6.0",
         "tailwindcss": "3.4.17",
         "tailwindcss-animate": "1.0.7",
-        "validator": "13.12.0",
-        "zod": "3.24.4"
+        "validator": "13.12.0"
     },
     "peerDependencies": {
         "react": "^18.2.0",
