--- a/apps/admin-x-activitypub/package.json
+++ b/apps/admin-x-activitypub/package.json
@@ -35,7 +35,8 @@
     "@types/react": "18.3.20",
     "@types/react-dom": "18.3.7",
     "jest": "29.7.0",
-    "ts-jest": "29.3.2"
+    "ts-jest": "29.3.2",
+    "vite": "4.5.6"
   },
   "nx": {
     "targets": {
@@ -66,8 +67,8 @@
   "dependencies": {
     "@radix-ui/react-form": "0.1.6",
     "@tryghost/admin-x-design-system": "0.0.0",
-    "@tryghost/shade": "0.0.0",
     "@tryghost/admin-x-framework": "0.0.0",
+    "@tryghost/shade": "0.0.0",
     "clsx": "2.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
