--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -30,6 +30,7 @@
         "@types/react": "18.3.20",
         "@types/react-dom": "18.3.7",
         "msw": "2.8.0",
+        "vite": "4.5.6",
         "vitest": "3.1.3"
     },
     "nx": {
