--- a/apps/stats/package.json
+++ b/apps/stats/package.json
@@ -41,7 +41,8 @@
         "moment-timezone": "^0.5.48",
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "react-svg-map": "2.2.0"
+        "react-svg-map": "2.2.0",
+        "vite": "4.5.6"
     },
     "nx": {
         "targets": {
