Added docker-build workflow

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -16,6 +16,9 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/* && \
     apt clean
 
+ENV NX_CACHE_DIRECTORY=/home/nx/.nxcache
+ENV NX_WORKSPACE_DATA_DIRECTORY=/home/nx/.nx
+
 # --------------------
 # Playwright Version
 # --------------------
@@ -82,8 +85,8 @@ COPY ghost/mw-vhost/package.json ghost/mw-vhost/package.json
 COPY ghost/prometheus-metrics/package.json ghost/prometheus-metrics/package.json
 COPY ghost/security/package.json ghost/security/package.json
 
-RUN --mount=type=cache,target=/home/ghost/.yarn-cache \
-    yarn config set cache-folder /home/ghost/.yarn-cache && \
+RUN --mount=type=cache,target=/home/yarn/.yarn-cache \
+    yarn config set cache-folder /home/yarn/.yarn-cache && \
     yarn install --frozen-lockfile --prefer-offline
 
 # --------------------
