fixup! Added unit test step

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -45,7 +45,12 @@ jobs:
       # Run the unit tests using the local image
       - name: Run unit tests
         run: |
+          # Create .env file with required variables
+          echo "SSH_AUTH_SOCK=/tmp/ssh-agent.sock" >> .env
 
+
+          # Run the tests with the pre-built image
+          COMPOSE_PROFILES=ghost NX_DAEMON=false \
           # Run the tests with the pre-built image
           COMPOSE_PROFILES=ghost NX_DAEMON=false \
           docker compose run --rm --no-deps ghost yarn test:unit
