--- a/apps/admin-x-settings/package.json
+++ b/apps/admin-x-settings/package.json
@@ -47,8 +47,8 @@
   "devDependencies": {
     "@playwright/test": "1.52.0",
     "@testing-library/react": "14.3.1",
-    "@tryghost/admin-x-design-system": "0.0.0",
-    "@tryghost/admin-x-framework": "0.0.0",
+    "@tryghost/admin-x-design-system": "workspace:*",
+    "@tryghost/admin-x-framework": "workspace:*",
     "@tryghost/custom-fonts": "1.0.0",
     "@types/react": "18.3.21",
     "@types/react-dom": "18.3.7",
