--- a/apps/admin-x-design-system/package.json
+++ b/apps/admin-x-design-system/package.json
@@ -10,7 +10,7 @@
   "sideEffects": false,
   "scripts": {
     "build": "tsc -p tsconfig.declaration.json && vite build",
-    "prepare": "yarn build",
+    "prepare": "pnpm run build",
     "test": "yarn test:unit",
     "test:unit": "yarn test:types && vitest run",
     "test:types": "tsc --noEmit",
@@ -28,6 +28,7 @@
   ],
   "devDependencies": {
     "@codemirror/lang-html": "6.4.9",
+    "@codemirror/state": "6.5.2",
     "@radix-ui/react-tooltip": "1.2.6",
     "@storybook/addon-essentials": "8.6.14",
     "@storybook/addon-interactions": "8.6.14",
@@ -40,6 +41,10 @@
     "@testing-library/react": "14.3.1",
     "@testing-library/react-hooks": "8.0.1",
     "@types/lodash-es": "4.17.12",
+    "@types/react": "18.3.21",
+    "@types/react-dom": "18.3.7",
+    "@types/validator": "13.15.0",
+    "@types/glob": "8.1.0",
     "@vitejs/plugin-react": "4.4.1",
     "c8": "8.0.1",
     "chai": "4.5.0",
@@ -55,13 +60,16 @@
     "sinon": "17.0.1",
     "storybook": "8.6.14",
     "typescript": "5.8.3",
-    "validator": "13.12.0",
+    "validator": "13.15.0",
     "vite": "4.5.14",
-    "vite-plugin-svgr": "3.3.0"
+    "vitest": "3.1.3",
+    "vite-plugin-svgr": "3.3.0",
+    "glob": "8.1.0"
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
     "@dnd-kit/sortable": "7.0.2",
+    "@dnd-kit/utilities": "3.2.2",
     "@ebay/nice-modal-react": "1.2.13",
     "@radix-ui/react-avatar": "1.1.9",
     "@radix-ui/react-checkbox": "1.3.1",
