--- a/apps/admin-x-framework/package.json
+++ b/apps/admin-x-framework/package.json
@@ -55,7 +55,7 @@
     "sideEffects": false,
     "scripts": {
         "build": "tsc -p tsconfig.declaration.json && vite build",
-        "prepare": "yarn build",
+        "prepare": "pnpm run build",
         "test": "yarn test:types && yarn test:unit",
         "test:types": "tsc --noEmit",
         "test:unit": "vitest run --coverage",
@@ -78,19 +78,24 @@
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "sinon": "17.0.1",
-        "typescript": "5.8.3"
+        "typescript": "5.8.3",
+        "@playwright/test": "1.52.0",
+        "glob": "8.1.0"
+
     },
     "dependencies": {
         "@sentry/react": "7.120.3",
         "@tanstack/react-query": "4.36.1",
-        "@tryghost/admin-x-design-system": "0.0.0",
-        "@tryghost/shade": "0.0.0",
+        "@tryghost/admin-x-design-system": "workspace:*",
+        "@tryghost/shade": "workspace:*",
+        "@ebay/nice-modal-react": "1.2.13",
         "@types/react": "18.3.21",
         "@types/react-dom": "18.3.7",
         "@vitejs/plugin-react": "4.4.1",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "react-router": "7.5.3",
+        "react-hot-toast": "2.5.2",
         "vite": "4.5.14",
         "vite-plugin-css-injected-by-js": "3.5.2",
         "vite-plugin-svgr": "3.3.0",
