--- a/apps/comments-ui/package.json
+++ b/apps/comments-ui/package.json
@@ -63,7 +63,7 @@
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "12.1.5",
     "@testing-library/user-event": "14.6.1",
-    "@tryghost/i18n": "0.0.0",
+    "@tryghost/i18n": "workspace:*",
     "@vitejs/plugin-react": "4.4.1",
     "@vitest/coverage-v8": "0.34.3",
     "autoprefixer": "10.4.19",
