--- a/apps/portal/package.json
+++ b/apps/portal/package.json
@@ -83,7 +83,7 @@
     "@sentry/react": "7.120.3",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "12.1.5",
-    "@tryghost/i18n": "0.0.0",
+    "@tryghost/i18n": "workspace:*",
     "@vitejs/plugin-react": "4.4.1",
     "@vitest/coverage-v8": "0.34.3",
     "@vitest/ui": "0.34.3",
