--- a/apps/shade/package.json
+++ b/apps/shade/package.json
@@ -10,7 +10,7 @@
     "sideEffects": false,
     "scripts": {
         "build": "tsc -p tsconfig.declaration.json && vite build",
-        "prepare": "yarn build",
+        "prepare": "pnpm run build",
         "test": "yarn test:types && yarn nx build && vitest run --coverage",
         "test:unit": "yarn test:types && yarn nx build && vitest run",
         "test:types": "tsc --noEmit",
@@ -41,6 +41,11 @@
         "@testing-library/react-hooks": "8.0.1",
         "@types/lodash-es": "4.17.12",
         "@types/node": "22.15.18",
+        "@types/mocha": "10.0.10",
+        "@types/react": "18.3.21",
+        "@types/react-dom": "18.3.7",
+        "@types/validator": "13.15.0",
+        "@types/glob": "8.1.0",
         "@vitejs/plugin-react": "4.4.1",
         "c8": "8.0.1",
         "chai": "4.5.0",
@@ -49,7 +54,9 @@
         "eslint-plugin-tailwindcss": "3.18.0",
         "jsdom": "24.1.3",
         "lodash-es": "4.17.21",
-        "mocha": "10.8.2"
+        "mocha": "10.8.2",
+        "glob": "8.1.0",
+        "vitest": "3.1.3"
     },
     "dependencies": {
         "moment-timezone": "^0.5.48",
