--- a/apps/signup-form/package.json
+++ b/apps/signup-form/package.json
@@ -49,7 +49,7 @@
         "@storybook/react-vite": "8.6.14",
         "@storybook/testing-library": "0.2.2",
         "@tailwindcss/line-clamp": "0.4.4",
-        "@tryghost/i18n": "0.0.0",
+        "@tryghost/i18n": "workspace:*",
         "@types/react": "18.3.21",
         "@types/react-dom": "18.3.7",
         "@vitejs/plugin-react": "4.4.1",
