--- a/apps/stats/package.json
+++ b/apps/stats/package.json
@@ -32,8 +32,8 @@
         "@svg-maps/world": "1.0.1",
         "@testing-library/react": "14.3.1",
         "@tinybirdco/charts": "0.2.4",
-        "@tryghost/admin-x-framework": "0.0.0",
-        "@tryghost/shade": "0.0.0",
+        "@tryghost/admin-x-framework": "workspace:*",
+        "@tryghost/shade": "workspace:*",
         "@types/react": "18.3.21",
         "@types/react-dom": "18.3.7",
         "@types/react-svg-map": "2.1.4",
@@ -66,8 +66,8 @@
     "dependencies": {
         "@radix-ui/react-form": "0.1.6",
         "@svg-maps/world": "1.0.1",
-        "@tryghost/admin-x-framework": "0.0.0",
-        "@tryghost/shade": "0.0.0",
+        "@tryghost/admin-x-framework": "workspace:*",
+        "@tryghost/shade": "workspace:*",
         "clsx": "2.1.1",
         "i18n-iso-countries": "7.14.0",
         "react": "18.3.1",
