--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
   "repository": "https://github.com/TryGhost/Ghost",
   "author": "Ghost Foundation",
   "license": "MIT",
-  "workspaces": [
-    "ghost/*",
-    "apps/*"
-  ],
   "monorepo": {
     "public": false,
     "internalPackages": true,
@@ -85,5 +81,6 @@
     "nx": "20.8.1",
     "rimraf": "5.0.10",
     "typescript": "5.8.3"
-  }
+  },
+  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
