--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -57,6 +57,9 @@
         "@tryghost/admin-x-framework": "workspace:*",
         "@tryghost/shade": "workspace:*",
         "react": "18.3.1",
-        "react-dom": "18.3.1"
+        "react-dom": "18.3.1",
+        "moment": "2.24.0",
+        "moment-timezone": "0.5.45",
+        "i18n-iso-countries": "7.14.0"
     }
 }
