--- a/apps/admin-x-settings/package.json
+++ b/apps/admin-x-settings/package.json
@@ -40,12 +40,20 @@
     "@tryghost/limit-service": "1.2.17",
     "@tryghost/nql": "0.12.7",
     "@tryghost/timezone-data": "0.4.7",
+    "@tanstack/react-query": "4.36.1",
+    "@ebay/nice-modal-react": "1.2.13",
+    "react-hot-toast": "2.5.2",
+    "@dnd-kit/sortable": "7.0.2",
+    "react-select": "5.10.1",
+    "clsx": "2.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "validator": "7.2.0"
   },
   "devDependencies": {
+    "semver": "7.7.2",
     "@playwright/test": "1.52.0",
+    "@sentry/react": "7.120.3",
     "@testing-library/react": "14.3.1",
     "@tryghost/admin-x-design-system": "workspace:*",
     "@tryghost/admin-x-framework": "workspace:*",
