--- a/apps/stats/package.json
+++ b/apps/stats/package.json
@@ -38,6 +38,7 @@
         "@types/react-dom": "18.3.7",
         "@types/react-svg-map": "2.1.4",
         "@vitejs/plugin-react": "4.4.1",
+        "moment": "2.24.0",
         "moment-timezone": "^0.5.48",
         "react": "18.3.1",
         "react-dom": "18.3.1",
