--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -186,6 +186,7 @@
     "metascraper-title": "5.45.10",
     "metascraper-url": "5.45.10",
     "mime-types": "2.1.35",
+    "mingo": "2.5.3",
     "moment": "2.24.0",
     "moment-timezone": "0.5.45",
     "multer": "1.4.4",
