Updated package.json scripts to use pnpm

--- a/apps/admin-x-framework/package.json
+++ b/apps/admin-x-framework/package.json
@@ -56,11 +56,11 @@
     "scripts": {
         "build": "tsc -p tsconfig.declaration.json && vite build",
         "prepare": "pnpm run build",
-        "test": "yarn test:types && yarn test:unit",
+        "test": "pnpm run test:types && pnpm run test:unit",
         "test:types": "tsc --noEmit",
         "test:unit": "vitest run --coverage",
         "lint:code": "eslint --ext .js,.ts,.cjs,.tsx src/ --cache",
-        "lint": "yarn lint:code && yarn lint:test",
+        "lint": "pnpm run lint:code && pnpm run lint:test",
         "lint:test": "eslint -c test/.eslintrc.cjs --ext .js,.ts,.cjs,.tsx test/ --cache"
     },
     "files": [
