--- a/apps/announcement-bar/package.json
+++ b/apps/announcement-bar/package.json
@@ -22,16 +22,16 @@
     "react-dom": "17.0.2"
   },
   "scripts": {
-    "dev": "concurrently \"vite preview -l silent\" \"yarn build:watch\"",
+    "dev": "concurrently \"vite preview -l silent\" \"pnpm run build:watch\"",
     "build": "vite build",
     "build:watch": "vite build --watch",
     "test": "vitest run",
-    "test:ci": "yarn test --coverage",
-    "test:unit": "yarn test:ci",
+    "test:ci": "pnpm run test --coverage",
+    "test:unit": "pnpm run test:ci",
     "lint": "eslint src --ext .js --cache",
-    "preship": "yarn lint",
+    "preship": "pnpm run lint",
     "ship": "node ../../.github/scripts/release-apps.js",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "pnpm run build"
   },
   "eslintConfig": {
     "env": {
