--- a/apps/signup-form/package.json
+++ b/apps/signup-form/package.json
@@ -21,18 +21,18 @@
         "preview": "concurrently \"vite preview -l silent\" \"vite build --watch\"",
         "dev:test": "vite build && vite preview --port 6175",
         "build": "tsc && vite build",
-        "lint": "yarn run lint:js",
+        "lint": "pnpm run lint:js",
         "lint:js": "eslint --ext .js,.ts,.cjs,.tsx --cache src test",
-        "test:unit": "yarn build",
+        "test:unit": "pnpm run build",
         "test:e2e": "NODE_OPTIONS='--experimental-specifier-resolution=node --no-warnings' VITE_TEST=true playwright test",
-        "test:slowmo": "TIMEOUT=100000 PLAYWRIGHT_SLOWMO=100 yarn test:e2e --headed",
-        "test:e2e:full": "ALL_BROWSERS=1 yarn test:e2e",
+        "test:slowmo": "TIMEOUT=100000 PLAYWRIGHT_SLOWMO=100 pnpm run test:e2e --headed",
+        "test:e2e:full": "ALL_BROWSERS=1 pnpm run test:e2e",
         "storybook": "storybook dev -p 6006",
         "build-storybook": "storybook build",
-        "preship": "yarn lint",
-        "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn version; fi",
+        "preship": "pnpm run lint",
+        "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then pnpm run version; fi",
         "postship": "git push ${GHOST_UPSTREAM:-origin} --follow-tags && npm publish",
-        "prepublishOnly": "yarn build"
+        "prepublishOnly": "pnpm run build"
     },
     "dependencies": {
         "react": "18.3.1",
