--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -22,39 +22,39 @@
   "scripts": {
     "archive": "npm pack",
     "dev": "node --watch --import=tsx index.js",
-    "build:assets": "yarn build:assets:css && yarn build:assets:js",
+    "build:assets": "pnpm run build:assets:css && pnpm run build:assets:js",
     "build:assets:js": "node bin/minify-assets.js",
     "build:assets:css": "postcss core/frontend/public/ghost.css --no-map --use cssnano -o core/frontend/public/ghost.min.css",
     "build:tsc": "tsc",
-    "pretest": "yarn build:assets",
-    "test": "yarn test:unit",
+    "pretest": "pnpm run build:assets",
+    "test": "pnpm run test:unit",
     "test:base": "mocha --reporter dot --require tsx --require=./test/utils/overrides.js --exit --trace-warnings --recursive --extension=test.js,test.ts",
-    "test:single": "yarn test:base --timeout=60000",
-    "test:all": "yarn test:unit && yarn test:integration && yarn test:e2e && yarn lint",
-    "test:debug": "DEBUG=ghost:test* yarn test",
-    "test:unit": "c8 yarn test:unit:base",
-    "test:unit:base": "yarn test:base './test/unit' --timeout=2000",
-    "test:integration": "yarn test:base './test/integration' --timeout=10000",
-    "test:e2e": "yarn test:base ./test/e2e-* --timeout=15000",
-    "test:regression": "yarn test:base './test/regression' --timeout=60000",
+    "test:single": "pnpm  test:base --timeout=60000",
+    "test:all": "pnpm test:unit && pnpm test:integration && pnpm test:e2e && pnpm lint",
+    "test:debug": "DEBUG=ghost:test* pnpm test",
+    "test:unit": "c8 pnpm run test:unit:base",
+    "test:unit:base": "pnpm run test:base './test/unit' --timeout=2000",
+    "test:integration": "pnpm run test:base './test/integration' --timeout=10000",
+    "test:e2e": "pnpm run test:base ./test/e2e-* --timeout=15000",
+    "test:regression": "pnpm run test:base './test/regression' --timeout=60000",
     "test:browser": "NODE_ENV=testing-browser playwright test",
     "test:browser:admin": "NODE_ENV=testing-browser  playwright test test/e2e-browser --project=admin",
     "test:browser:portal": "NODE_ENV=testing-browser playwright test test/e2e-browser --project=portal",
     "test:browser:setup": "npx playwright install",
-    "test:ci:e2e": "c8 -c ./.c8rc.e2e.json -o coverage-e2e yarn test:e2e -b",
-    "test:ci:regression": "yarn test:regression -b",
-    "test:ci:integration": "c8 -c ./.c8rc.e2e.json -o coverage-integration --lines 52 --functions 47 --branches 73 --statements 52 yarn test:integration -b",
-    "test:unit:slow": "yarn test:unit --reporter=mocha-slow-test-reporter",
-    "test:int:slow": "yarn test:integration --reporter=mocha-slow-test-reporter",
-    "test:e2e:slow": "yarn test:e2e --reporter=mocha-slow-test-reporter",
+    "test:ci:e2e": "c8 -c ./.c8rc.e2e.json -o coverage-e2e pnpm run test:e2e -b",
+    "test:ci:regression": "pnpm run test:regression -b",
+    "test:ci:integration": "c8 -c ./.c8rc.e2e.json -o coverage-integration --lines 52 --functions 47 --branches 73 --statements 52 pnpm run test:integration -b",
+    "test:unit:slow": "pnpm run test:unit --reporter=mocha-slow-test-reporter",
+    "test:int:slow": "pnpm run test:integration --reporter=mocha-slow-test-reporter",
+    "test:e2e:slow": "pnpm run test:e2e --reporter=mocha-slow-test-reporter",
     "test:reg:slow": "mocha --reporter dot --require=./test/utils/overrides.js --exit --trace-warnings --recursive --extension=test.js  './test/regression' --timeout=60000 --reporter=mocha-slow-test-reporter",
     "lint:server": "eslint --ignore-path .eslintignore 'core/server/**/*.js' 'core/*.js' '*.js' --cache",
     "lint:shared": "eslint --ignore-path .eslintignore 'core/shared/**/*.js' --cache",
     "lint:frontend": "eslint --ignore-path .eslintignore 'core/frontend/**/*.js' --cache",
     "lint:test": "eslint -c test/.eslintrc.js --ignore-path test/.eslintignore 'test/**/*.js' --cache",
-    "lint:code": "yarn lint:server && yarn lint:shared && yarn lint:frontend",
+    "lint:code": "pnpm run lint:server && pnpm run lint:shared && pnpm run lint:frontend",
     "lint:types": "eslint --ignore-path .eslintignore '**/*.ts' --cache && tsc --noEmit",
-    "lint": "yarn lint:server && yarn lint:shared && yarn lint:frontend && yarn lint:test && yarn lint:types",
+    "lint": "pnpm run lint:server && pnpm run lint:shared && pnpm run lint:frontend && pnpm run lint:test && pnpm run lint:types",
     "prepack": "node monobundle.js"
   },
   "engines": {
