--- a/apps/admin-x-activitypub/package.json
+++ b/apps/admin-x-activitypub/package.json
@@ -19,13 +19,13 @@
     "dev": "vite build --watch",
     "dev:start": "vite",
     "build": "tsc && vite build",
-    "lint": "yarn run lint:code && yarn run lint:test",
+    "lint": "pnpm run lint:code && pnpm run lint:test",
     "lint:code": "eslint --ext .js,.ts,.cjs,.tsx --cache src",
     "lint:test": "eslint -c test/.eslintrc.cjs --ext .js,.ts,.cjs,.tsx --cache test",
     "test:unit": "tsc --noEmit && vitest run",
     "test:acceptance": "NODE_OPTIONS='--experimental-specifier-resolution=node --no-warnings' VITE_TEST=true playwright test",
-    "test:acceptance:slowmo": "TIMEOUT=100000 PLAYWRIGHT_SLOWMO=100 yarn test:acceptance --headed",
-    "test:acceptance:full": "ALL_BROWSERS=1 yarn test:acceptance",
+    "test:acceptance:slowmo": "TIMEOUT=100000 PLAYWRIGHT_SLOWMO=100 pnpm run test:acceptance --headed",
+    "test:acceptance:full": "ALL_BROWSERS=1 pnpm run test:acceptance",
     "preview": "vite preview"
   },
   "devDependencies": {
