--- a/apps/admin-x-settings/package.json
+++ b/apps/admin-x-settings/package.json
@@ -25,12 +25,12 @@
     "dev": "vite build --watch",
     "dev:start": "vite",
     "build": "tsc && vite build",
-    "lint": "yarn run lint:js",
+    "lint": "pnpm run lint:js",
     "lint:js": "eslint --ext .js,.ts,.cjs,.tsx --cache src test",
-    "test:unit": "yarn nx build && vitest run",
+    "test:unit": "pnpm nx build && vitest run",
     "test:acceptance": "NODE_OPTIONS='--experimental-specifier-resolution=node --no-warnings' VITE_TEST=true playwright test",
-    "test:acceptance:slowmo": "TIMEOUT=100000 PLAYWRIGHT_SLOWMO=100 yarn test:acceptance --headed",
-    "test:acceptance:full": "ALL_BROWSERS=1 yarn test:acceptance",
+    "test:acceptance:slowmo": "TIMEOUT=100000 PLAYWRIGHT_SLOWMO=100 pnpm run test:acceptance --headed",
+    "test:acceptance:full": "ALL_BROWSERS=1 pnpm run test:acceptance",
     "preview": "vite preview"
   },
   "dependencies": {
