--- a/apps/comments-ui/package.json
+++ b/apps/comments-ui/package.json
@@ -15,20 +15,20 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "dev": "concurrently \"yarn preview --host -l silent\" \"yarn build:watch\"",
+    "dev": "concurrently \"pnpm run preview --host -l silent\" \"pnpm run build:watch\"",
     "dev:test": "vite build && vite preview --port 7175",
     "build": "vite build",
     "build:watch": "vite build --watch",
     "preview": "vite preview",
-    "test": "yarn test:unit && yarn test:e2e",
+    "test": "pnpm run test:unit && pnpm run test:e2e",
     "test:unit": "vitest run --coverage",
     "test:e2e": "NODE_OPTIONS='--experimental-specifier-resolution=node --no-warnings' VITE_TEST=true playwright test",
-    "test:slowmo": "TIMEOUT=100000 PLAYWRIGHT_SLOWMO=1000 yarn test:e2e --headed",
-    "test:e2e:full": "ALL_BROWSERS=1 yarn test:e2e",
+    "test:slowmo": "TIMEOUT=100000 PLAYWRIGHT_SLOWMO=1000 pnpm run test:e2e --headed",
+    "test:e2e:full": "ALL_BROWSERS=1 pnpm run test:e2e",
     "lint": "eslint src --ext .js,.ts,.jsx,.tsx --cache",
-    "preship": "yarn lint",
+    "preship": "pnpm run lint",
     "ship": "node ../../.github/scripts/release-apps.js",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "pnpm run build"
   },
   "browserslist": {
     "production": [
