--- a/apps/posts/package.json
+++ b/apps/posts/package.json
@@ -20,7 +20,7 @@
         "dev:start": "vite",
         "build": "tsc && vite build",
         "test:unit": "vitest run test/unit",
-        "lint": "yarn run lint:code && yarn run lint:test",
+        "lint": "pnpm run lint:code && pnpm run lint:test",
         "lint:code": "eslint --ext .js,.ts,.cjs,.tsx --cache src",
         "lint:test": "eslint -c test/.eslintrc.cjs --ext .js,.ts,.cjs,.tsx --cache test",
         "preview": "vite preview"
