--- a/apps/stats/package.json
+++ b/apps/stats/package.json
@@ -23,7 +23,7 @@
         "test:watch": "vitest",
         "test:coverage": "vitest run --coverage",
         "build": "tsc && vite build",
-        "lint": "yarn run lint:code && yarn run lint:test",
+        "lint": "pnpm run lint:code && pnpm run lint:test",
         "lint:code": "eslint --ext .js,.ts,.cjs,.tsx --cache src",
         "lint:test": "eslint -c test/.eslintrc.cjs --ext .js,.ts,.cjs,.tsx --cache test",
         "preview": "vite preview"
